--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,13 @@
       "@/*": ["./src/*", "./dist/*", ""]
     }
   },
-  "include": ["src", "./.eslintrc.cjs", "./vite.config.ts", "./setupTest.ts"],
+  "include": [
+    "src",
+    "./.eslintrc.cjs",
+    "./vite.config.ts",
+    "./setupTest.ts",
+    "cypress",
+    "./cypress.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
